# computree-mirror

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  all_check_dependencies.pri  amkgl_user_definitions.pri  base.pro  base_wo_qglviewer.pro  computree.pro  create_plugins_pro.bat  create_plugins_pro.sh  destdir.pri  gdal_default_path.pri  geos_default_path.pri  gsl_default_path.pri  include_all.pri  include_ct_library.pri  include_gdal_necessary.pri  include_gsl_necessary.pri  include_opencv_necessary.pri  include_pcl_necessary.pri  lrelease.bat  lrelease.sh  lupdate.bat  lupdate.sh  opencv_default_path.pri  pcl_default_path.pri  plugin_shared.pri  plugins.pro  prolist.txt  qglviewer_default_path.pri  qtcmdloop.bat  qtcmdloop.sh  readmeToCompileProject.txt  remplacements_v5_v6.xlsx
ComputreeBatch/: CMakeLists.txt  ComputreeBatch.pro  batch.cpp  batch.h  batchdialog.cpp  batchdialog.h  batchdialog.ui  batchpluginmanager.cpp  main.cpp  signalhandler.cpp  signalhandler.h
ComputreeBatch/StepResultTreeView/: gstepmanager2.cpp  gstepmanager2.h
ComputreeGui/: CMakeLists.txt  Computree.icns  ComputreeGui.pro  dm_actionshandler.cpp  dm_actionshandler.h  dm_actionsmanager.cpp  dm_colorpicker.cpp  dm_colorpicker.h  dm_document.cpp  dm_document.h  dm_documentmanager.h  dm_documentview.h  dm_domutils.h  dm_graphicsview.cpp  dm_graphicsview.h  dm_graphicsviewcamera.h  dm_graphicsviewoptions.cpp  dm_graphicsviewoptions.h  dm_graphicsviewsynchronizedgroup.cpp  dm_guimanager.cpp  dm_guimanager.h  dm_itemdrawablemanageroptions.cpp  dm_itemdrawablemanageroptions.h  dm_itemmodelviewsynchronizedgroup.cpp  dm_mainwindow.cpp  dm_mainwindow.h  dm_multipleitemdrawablemodelmanager.h  dm_stepsfrompluginsmodelconstructor.cpp  dm_stepsfrompluginsmodelconstructor.h  imainprogressdialog.h  main.cpp  svnrevision.h.in
ComputreeGui/languages/: computreegui_en.qm  computreegui_en.ts  computreegui_fr.qm  computreegui_fr.ts
ComputreeGui/muParser/: muParserBase.h  muParserBytecode.cpp  muParserDLL.cpp  muParserToken.h  muparser.pri
ComputreeGui/qtcolorpicker/: qtcolorpicker.cpp  qtcolorpicker.h
ComputreeGui/resource/: icones.qrc
ComputreeGui/tools/: tools.pri
ComputreeGui/tools/amkgl/: dm_amkglcoordinatesystemmanager.cpp  dm_amkglcoordinatesystemmanager.h  dm_amkgleasyaccess.cpp  dm_amkgleasyaccess.h  dm_amkglglobaledgescloudmanager.cpp  dm_amkglglobaledgescloudmanager.h  dm_amkglglobalfacescloudmanager.cpp  dm_amkglglobalfacescloudmanager.h  dm_amkglglobalpointscloudmanager.cpp  dm_amkglglobalpointscloudmanager.h  dm_amkglitemmodel.h  dm_amkglobjectspickerpainter.cpp  dm_amkglobjectspickerpainter.h  dm_amkglpermanentpainter.cpp  dm_amkglpermanentpainter.h  dm_globalpointsmodifier.cpp  dm_globalpointsmodifier.h  dm_meshobjectsmodifier.cpp  dm_meshobjectsmodifier.h  dm_multipleobjectsmodifier.cpp  dm_multipleobjectsmodifier.h  dm_objectsmodifier.cpp  dm_objectsmodifier.h  dm_objectsvisitorfollowerbymodel.cpp  dm_objectsvisitorfollowerbymodel.h  dm_objectsvisitorfollowerforaction.cpp  dm_objectsvisitorfollowerforaction.h  dm_sceneforaction.cpp  dm_sceneforaction.h
ComputreeGui/tools/attributes/: dm_attributesbuildingcollectiont.h  dm_attributesbuildingcollectiont.hpp
ComputreeGui/tools/document/: dm_fakeattributemanagert.h  dm_itemgroupgui.cpp  dm_itemgroupgui.h  dm_resultgroupgui.cpp  dm_resultgroupgui.h
ComputreeGui/tools/graphicsview/: dm_elementinfomanager.cpp  dm_elementinfomanager.h  dm_pointofview.cpp  dm_pointofview.h  dm_pointscolourist.cpp  dm_pointscolourist.h  dm_pointsrecoverer.cpp  dm_pointsrecoverer.h
ComputreeGui/tools/guimanager/: dm_asyncoperation.cpp  dm_guimanagertoken.h
ComputreeGui/tools/itemdrawable/: dm_contextmenucolouristadder.cpp  dm_contextmenucolouristadder.h  dm_documentmenugenerator.cpp  dm_documentmenugenerator.h  dm_itemdrawablebuildert.h  dm_itemdrawablebuildert.hpp  dm_itemdrawableviewconfigurationbuilder.cpp  dm_itemdrawableviewconfigurationbuilder.h
ComputreeGui/tools/treeview/: dm_iitemdrawablestandarditembuildert.h  dm_itemdrawabletreeviewcontrollert.h  dm_itemdrawabletreeviewcontrollert.hpp  dm_itemdrawabletreeviewmodelbuildert.h  dm_itemdrawabletreeviewmodelbuildert.hpp  dm_itemdrawabletreeviewmodelresearchert.hpp  dm_itreeviewmanagert.h  dm_sortfiltermathproxymodel.cpp  dm_sortfiltermathproxymodel.h
ComputreeGui/tools/worker/: dm_abstractworker.cpp
ComputreeGui/view/: view.pri
ComputreeGui/view/ActionsView/: gactionsmanager.cpp  gactionsmanager.h
ComputreeGui/view/DocumentView/: gcameracoordinatesoptions.cpp  gcameracoordinatesoptions.h  gcameracoordinatesoptions.ui  gcameragraphicsoptions.cpp  gcameragraphicsoptions.h  gcameragraphicsoptions.ui  gdocumentmanagerview.cpp  gdocumentmanagerview.h  gdocumentview.cpp  gdocumentviewforgraphics.cpp  gdocumentviewforgraphics.h  gdocumentviewforitemmodel.cpp  gdocumentviewforitemmodel.h  gpointofviewdocumentmanager.cpp
ComputreeGui/view/ItemDrawableConfigurationView/: dm_itemdrawableconfigurationandgraphicsviewsynchronizer.cpp  gitemdrawableconfigurationmanagerview.cpp  gitemdrawableconfigurationmanagerview.h  gitemdrawableconfigurationmanagerview.ui
ComputreeGui/view/ItemDrawableModelView/: gitemdrawablemodelmanager.cpp  gitemdrawablemodelmanager.h  gmultipleitemdrawablemodelmanager.cpp  gmultipleitemdrawablemodelmanager.h
ComputreeGui/view/ItemDrawableView/: gitemdrawablemanageroptionscolor.cpp
ComputreeGui/view/MainView/: gaboutdialog.cpp  gaboutdialog.ui  gaboutmemory.cpp  gaboutpluginsdialog.cpp  gaboutpluginsdialog.h  gaboutstepdialog.cpp  gaboutstepdialog.h  gaboutstepdialog.ui  gcitationdialog.h  gfavoritesmenudialog.cpp  gfavoritesmenudialog.h  gguimanager.cpp  gguimanager.h  gineedhelpdialog.cpp  gineedhelpdialog.ui  glogwidget.cpp  glogwidget.h  glogwidget.ui  gmainprogressdialog.cpp  gmainprogressdialog.h  gmainwindow.cpp  gmainwindow.h  gscriptdocinfodialog.cpp  gscriptdocinfodialog.h  gscriptdocinfodialog.ui  gstepchooserdialog.cpp  (+1 more)
plugins/pluginbase/: CMakeLists.txt  pb_pluginentry.h  pb_steppluginmanager.cpp  pb_steppluginmanager.h  pluginbase.pro
(+969 files in other folders)
