project(ComputreeGui)

set(COMPUTREEGUI_HEADERS
    ${ctlibcommon_SOURCE_DIR}/include/documentinterface.h
    ${ctlibcommon_SOURCE_DIR}/include/graphicsviewinterface.h
    ${ctlibcommon_SOURCE_DIR}/include/indocumentviewinterface.h
    ${ctlibcommon_SOURCE_DIR}/include/loginterface.h
    ${ctlibcommon_SOURCE_DIR}/include/painterinterface.h
    ${ctlibcommon_SOURCE_DIR}/include/settingsinterfaces.h
    ${ctlibcommon_SOURCE_DIR}/include/treeviewinterface.h
    dm_graphicsviewsynchronizedgroup.h
    dm_graphicsviewsynchronizedgroupoptions.h
    dm_itemdrawablemodelmanager.h
    dm_multipleitemdrawablemodelmanager.h
    dm_itemmodelviewsynchronizedgroup.h
    dm_abstractviewsynchronizedgroup.h
    dm_itemmodelviewsynchronizedgroupoptions.h
    dm_actionsmanager.h
    dm_actionshandler.h
    imainprogressdialog.h
    dm_abstractinfo.h
    dm_iteminfoforgraphics.h
    dm_iprogresslistener.h
    dm_progresslistenermanager.h
    dm_stepsfrompluginsmodelconstructor.h
    dm_domutils.h
    dm_itemdrawableconfigurationmanagerview.h
    dm_document.h
    dm_graphicsview.h
    dm_graphicsviewoptions.h
    dm_documentview.h
    dm_documentmanagerview.h
    dm_documentmanager.h
    dm_guimanager.h
    dm_mainwindow.h
    dm_asynchroneprogress.h
    dm_itemdrawablemanageroptions.h
    dm_graphicsviewcamera.h
    dm_context.h
    dm_colorpicker.h

    # VIEWS
    view/MainView/gscriptdocinfodialog.h
    view/MainView/gmainwindow.h
    view/MainView/gguimanager.h
    view/MainView/gmainprogressdialog.h
    view/ItemDrawableView/gitemdrawablemanageroptionscolor.h
    view/StepResultTreeView/gtreestepcontextmenu.h
    view/StepResultTreeView/gstepmanageroptions.h
    view/DocumentView/gdocumentview.h
    view/DocumentView/gdocumentmanagerview.h
    view/DocumentView/gcameragraphicsoptions.h
    view/ItemDrawableConfigurationView/gitemdrawableconfigurationmanagerview.h
    view/MainView/gaboutdialog.h
    view/DocumentView/gpointofviewdocumentmanager.h
    view/DocumentView/GraphicsViews/ggraphicsviewoptions.h
    view/DocumentView/GraphicsViews/ggraphicsviewsynchronizedgroup.h
    view/DocumentView/GraphicsViews/ggraphicsview.h
    view/DocumentView/gdocumentviewforgraphics.h
    view/DocumentView/gdocumentviewforitemmodel.h
    view/MainView/gaboutpluginsdialog.h
    view/DocumentView/gcameracoordinatesoptions.h
    view/DocumentView/GraphicsViews/3D/Camera/g3dcameracontroller.h
    view/ItemDrawableModelView/gitemdrawablemodelmanager.h
    view/ItemDrawableModelView/gmultipleitemdrawablemodelmanager.h
    view/Tools/modelqstandarditem.h
    view/DocumentView/GraphicsViews/gitemmodelviewsyncchoosedialog.h
    view/Tools/gradient/gradientarrow.h
    view/DocumentView/GraphicsViews/ColorGradient/gcolorgradientview.h
    view/DocumentView/GraphicsViews/PointsAttributes/gpointsattributesmanager.h
    view/ActionsView/gactionsmanager.h
    view/DocumentView/GraphicsViews/PointsAttributes/gminmaxattributesscalarconfiguration.h
    view/MainView/gaboutstepdialog.h
    view/MainView/glogwidget.h
    view/Tools/gcomboboxwithemptytitlewidget.h
    view/DocumentView/ItemModelViews/gtreeview.h
    view/DocumentView/ItemModelViews/gitemmodelview.h
    view/DocumentView/ItemModelViews/cg_customtreeitemmodel.h
    view/DocumentView/ItemModelViews/cg_customtreeitem.h
    view/MainView/gineedhelpdialog.h
    view/Steps/dm_steptreeviewdefaultproxymodel.h
    view/Steps/gstepstreeviewdefault.h
    view/Steps/gstepviewdefault.h
    view/DocumentView/GraphicsViews/3D/Painting/dm_fakepainter.h
    view/ItemDrawableConfigurationView/dm_itemdrawableconfigurationandgraphicsviewsynchronizer.h
    view/MainView/gfavoritesmenudialog.h
    view/MainView/gstepchooserdialog.h
    view/MainView/gaboutmemory.h
    view/Tools/gradient/ggradientmanager.h
    view/DocumentView/GraphicsViews/3D/ggraphicsviewimp.h
    view/Tools/graphicsviewdebugmode.h
    view/StepResultTreeView/gstepmanager2.h

    #TOOLS
    tools/worker/dm_abstractworker.h
    tools/itemdrawable/dm_itemdrawableviewconfigurationbuilder.h
    tools/guimanager/dm_abstractasyncoperationoptions.h
    tools/guimanager/dm_guimanagertoken.h
    tools/attributes/dm_attributesbuildingcollectiont.h
    tools/attributes/dm_attributesbuildingcollectiont.hpp
    tools/attributes/worker/dm_attributescolort.h
    tools/attributes/worker/dm_attributescolort.hpp
    tools/attributes/worker/dm_attributesmanager.h
    tools/attributes/worker/dm_attributesnormalt.h
    tools/attributes/worker/dm_attributesnormalt.hpp
    tools/attributes/worker/dm_attributesscalart.h
    tools/attributes/worker/dm_attributesscalart.hpp
    tools/attributes/worker/abstract/dm_abstractattributes.h
    tools/attributes/worker/abstract/dm_abstractattributescolor.h
    tools/attributes/worker/abstract/dm_abstractattributesnormal.h
    tools/attributes/worker/abstract/dm_abstractattributesscalar.h
    tools/graphicsview/dm_pointofview.h
    tools/graphicsview/dm_pointofviewmanager.h
    tools/guimanager/dm_asyncoperation.h
    tools/treeview/dm_sortfiltermathproxymodel.h
    tools/treeview/dm_actionshandlerfortreeview.h
    tools/itemdrawable/dm_itemdrawablebuildert.h
    tools/itemdrawable/dm_itemdrawablebuildert.hpp
    tools/treeview/dm_itemdrawabletreeviewmodelbuildert.h
    tools/treeview/dm_iitemdrawablestandarditembuildert.h
    tools/treeview/dm_itemdrawabletreeviewcontrollert.h
    tools/treeview/dm_itreeviewmanagert.h
    tools/treeview/dm_itemdrawabletreeviewmodelresearchert.h
    tools/treeview/dm_abstractitemtreeviewcontroller.h
    tools/itemdrawable/dm_abstractitemdrawablebuilder.h
    tools/treeview/dm_itemdrawabletreeviewcontrollert.hpp
    tools/treeview/dm_itemdrawabletreeviewmodelbuildert.hpp
    tools/treeview/dm_itemdrawabletreeviewmodelresearchert.hpp
    tools/graphicsview/dm_elementinfomanager.h
    tools/graphicsview/dm_colorlinearinterpolator.h
    tools/graphicsview/dm_pointscolourist.h
    tools/graphicsview/dm_pointsrecoverer.h
    tools/itemdrawable/dm_contextmenucolouristadder.h
    tools/amkgl/dm_amkglitemmodel.h
    tools/amkgl/dm_amkgleasyaccess.h
    tools/amkgl/dm_amkglcoordinatesystemmanager.h
    tools/amkgl/dm_amkglglobalpointscloudmanager.h
    tools/amkgl/dm_amkglobjectspickerpainter.h
    tools/amkgl/dm_amkglpermanentpainter.h
    tools/amkgl/dm_objectsvisitorfollowerbymodel.h
    tools/amkgl/dm_objectsmodifier.h
    tools/amkgl/dm_globalpointsmodifier.h
    tools/amkgl/dm_sceneforaction.h
    tools/amkgl/dm_objectsvisitorfollowerforaction.h
    tools/amkgl/dm_amkglglobalfacescloudmanager.h
    tools/amkgl/dm_amkglglobaledgescloudmanager.h
    tools/amkgl/dm_meshobjectsmodifier.h
    tools/amkgl/dm_multipleobjectsmodifier.h
    tools/itemdrawable/dm_documentmenugenerator.h
    tools/document/dm_resultgroupgui.h
    tools/document/dm_itemgroupgui.h
    tools/document/dm_fakeattributemanagert.h
    tools/attributes/worker/dm_attributesmanagerupdater.h
)

set(COMPUTREEGUI_SOURCES
    main.cpp
    dm_document.cpp
    dm_graphicsview.cpp
    dm_graphicsviewoptions.cpp
    dm_documentview.cpp
    dm_documentmanagerview.cpp
    dm_documentmanager.cpp
    dm_guimanager.cpp
    dm_mainwindow.cpp
    dm_asynchroneprogress.cpp
    dm_itemdrawablemanageroptions.cpp
    dm_graphicsviewcamera.cpp
    dm_graphicsviewsynchronizedgroup.cpp
    dm_graphicsviewsynchronizedgroupoptions.cpp
    dm_itemdrawablemodelmanager.cpp
    dm_multipleitemdrawablemodelmanager.cpp
    dm_itemmodelviewsynchronizedgroup.cpp
    dm_abstractviewsynchronizedgroup.cpp
    dm_itemmodelviewsynchronizedgroupoptions.cpp
    dm_actionsmanager.cpp
    dm_actionshandler.cpp
    dm_abstractinfo.cpp
    dm_iteminfoforgraphics.cpp
    dm_progresslistenermanager.cpp
    dm_stepsfrompluginsmodelconstructor.cpp
    dm_itemdrawableconfigurationmanagerview.cpp
    dm_colorpicker.cpp

    # VIEW
    view/MainView/gscriptdocinfodialog.cpp
    view/MainView/gmainwindow.cpp
    view/MainView/gguimanager.cpp
    view/MainView/gmainprogressdialog.cpp
    view/ItemDrawableView/gitemdrawablemanageroptionscolor.cpp
    view/StepResultTreeView/gtreestepcontextmenu.cpp
    view/StepResultTreeView/gstepmanageroptions.cpp
    view/DocumentView/gdocumentview.cpp
    view/DocumentView/gdocumentmanagerview.cpp
    view/DocumentView/gcameragraphicsoptions.cpp
    view/ItemDrawableConfigurationView/gitemdrawableconfigurationmanagerview.cpp
    view/MainView/gaboutdialog.cpp
    view/DocumentView/gpointofviewdocumentmanager.cpp
    view/DocumentView/GraphicsViews/ggraphicsviewoptions.cpp
    view/DocumentView/GraphicsViews/ggraphicsviewsynchronizedgroup.cpp
    view/DocumentView/GraphicsViews/ggraphicsview.cpp
    view/DocumentView/gdocumentviewforgraphics.cpp
    view/DocumentView/gdocumentviewforitemmodel.cpp
    view/MainView/gaboutpluginsdialog.cpp
    view/DocumentView/gcameracoordinatesoptions.cpp
    view/DocumentView/GraphicsViews/3D/Camera/g3dcameracontroller.cpp
    view/ItemDrawableModelView/gitemdrawablemodelmanager.cpp
    view/ItemDrawableModelView/gmultipleitemdrawablemodelmanager.cpp
    view/Tools/modelqstandarditem.cpp
    view/DocumentView/GraphicsViews/gitemmodelviewsyncchoosedialog.cpp
    view/Tools/gradient/gradientarrow.cpp
    view/DocumentView/GraphicsViews/ColorGradient/gcolorgradientview.cpp
    view/DocumentView/GraphicsViews/PointsAttributes/gpointsattributesmanager.cpp
    view/MainView/gaboutstepdialog.cpp
    view/ActionsView/gactionsmanager.cpp
    view/DocumentView/GraphicsViews/PointsAttributes/gminmaxattributesscalarconfiguration.cpp
    view/MainView/glogwidget.cpp
    view/Tools/gcomboboxwithemptytitlewidget.cpp
    view/DocumentView/ItemModelViews/gtreeview.cpp
    view/DocumentView/ItemModelViews/gitemmodelview.cpp
    view/DocumentView/ItemModelViews/cg_customtreeitemmodel.cpp
    view/DocumentView/ItemModelViews/cg_customtreeitem.cpp
    view/MainView/gineedhelpdialog.cpp
    view/Steps/dm_steptreeviewdefaultproxymodel.cpp
    view/Steps/gstepstreeviewdefault.cpp
    view/Steps/gstepviewdefault.cpp
    view/DocumentView/GraphicsViews/3D/Painting/dm_fakepainter.cpp
    view/ItemDrawableConfigurationView/dm_itemdrawableconfigurationandgraphicsviewsynchronizer.cpp
    view/MainView/gfavoritesmenudialog.cpp
    view/MainView/gstepchooserdialog.cpp
    view/MainView/gaboutmemory.cpp
    view/Tools/gradient/ggradientmanager.cpp
    view/DocumentView/GraphicsViews/3D/ggraphicsviewimp.cpp
    view/Tools/graphicsviewdebugmode.cpp
    view/StepResultTreeView/gstepmanager2.cpp

    # TOOLS
    tools/worker/dm_abstractworker.cpp
    tools/itemdrawable/dm_itemdrawableviewconfigurationbuilder.cpp
    tools/guimanager/dm_abstractasyncoperationoptions.cpp
    tools/guimanager/dm_guimanagertoken.cpp
    tools/attributes/worker/dm_attributescolort.cpp
    tools/attributes/worker/dm_attributesmanager.cpp
    tools/attributes/worker/dm_attributesnormalt.cpp
    tools/attributes/worker/dm_attributesscalart.cpp
    tools/attributes/worker/abstract/dm_abstractattributes.cpp
    tools/attributes/worker/abstract/dm_abstractattributescolor.cpp
    tools/attributes/worker/abstract/dm_abstractattributesnormal.cpp
    tools/attributes/worker/abstract/dm_abstractattributesscalar.cpp
    tools/graphicsview/dm_pointofview.cpp
    tools/graphicsview/dm_pointofviewmanager.cpp
    tools/guimanager/dm_asyncoperation.cpp
    tools/treeview/dm_sortfiltermathproxymodel.cpp
    tools/treeview/dm_actionshandlerfortreeview.cpp
    tools/treeview/dm_abstractitemtreeviewcontroller.cpp
    tools/graphicsview/dm_elementinfomanager.cpp
    tools/graphicsview/dm_colorlinearinterpolator.cpp
    tools/graphicsview/dm_pointscolourist.cpp
    tools/graphicsview/dm_pointsrecoverer.cpp
    tools/itemdrawable/dm_contextmenucolouristadder.cpp
    tools/amkgl/dm_amkgleasyaccess.cpp
    tools/amkgl/dm_amkglcoordinatesystemmanager.cpp
    tools/amkgl/dm_amkglglobalpointscloudmanager.cpp
    tools/amkgl/dm_objectsvisitorfollowerbymodel.cpp
    tools/amkgl/dm_objectsmodifier.cpp
    tools/amkgl/dm_globalpointsmodifier.cpp
    tools/amkgl/dm_sceneforaction.cpp
    tools/amkgl/dm_objectsvisitorfollowerforaction.cpp
    tools/amkgl/dm_amkglglobalfacescloudmanager.cpp
    tools/amkgl/dm_amkglglobaledgescloudmanager.cpp
    tools/amkgl/dm_meshobjectsmodifier.cpp
    tools/amkgl/dm_multipleobjectsmodifier.cpp
    tools/itemdrawable/dm_documentmenugenerator.cpp
    tools/document/dm_resultgroupgui.cpp
    tools/document/dm_itemgroupgui.cpp
    tools/attributes/worker/dm_attributesmanagerupdater.cpp
)

set(COMPUTREEGUI_FORMS
    # VIEW
    view/DocumentView/GraphicsViews/ggraphicsviewoptions.ui
    view/MainView/gscriptdocinfodialog.ui
    view/DocumentView/gcameragraphicsoptions.ui
    view/ItemDrawableView/gitemdrawablemanageroptionscolor.ui
    view/MainView/gmainwindow.ui
    view/StepResultTreeView/gstepmanageroptions.ui
    view/ItemDrawableConfigurationView/gitemdrawableconfigurationmanagerview.ui
    view/MainView/gaboutdialog.ui
    view/DocumentView/GraphicsViews/ggraphicsviewsynchronizedgroup.ui
    view/MainView/gaboutpluginsdialog.ui
    view/DocumentView/gcameracoordinatesoptions.ui
    view/ItemDrawableModelView/gitemdrawablemodelmanager.ui
    view/ItemDrawableModelView/gmultipleitemdrawablemodelmanager.ui
    view/DocumentView/GraphicsViews/gitemmodelviewsyncchoosedialog.ui
    view/DocumentView/GraphicsViews/PointsAttributes/gpointsattributesmanager.ui
    view/ActionsView/gactionsmanager.ui
    view/DocumentView/GraphicsViews/PointsAttributes/gminmaxattributesscalarconfiguration.ui
    view/MainView/gaboutstepdialog.ui
    view/MainView/glogwidget.ui
    view/Tools/gcomboboxwithemptytitlewidget.ui
    view/MainView/gineedhelpdialog.ui
    view/Steps/gstepviewdefault.ui
    view/MainView/gfavoritesmenudialog.ui
    view/MainView/gstepchooserdialog.ui
    view/MainView/gaboutmemory.ui
    view/Tools/gradient/ggradientmanager.ui
    view/StepResultTreeView/gstepmanager2.ui

)
set(COMPUTREEGUI_RESOURCES
    resource/icones.qrc
    Computree.ico
)

set(COMPUTREEGUI_TRANSLATIONS
    languages/computreegui_fr.ts
    languages/computreegui_en.ts
)

add_executable(ComputreeGui
    ${COMPUTREEGUI_HEADERS}
    ${COMPUTREEGUI_SOURCES}
    ${COMPUTREEGUI_FORMS}
    ${COMPUTREEGUI_RESOURCES}
    ${COMPUTREEGUI_TRANSLATIONS}
)

target_include_directories(ComputreeGui PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    # VIEW
    ${CMAKE_CURRENT_SOURCE_DIR}/view
    ${CMAKE_CURRENT_SOURCE_DIR}/view/DocumentView/GraphicsView
    ${CMAKE_CURRENT_SOURCE_DIR}/view/DocumentView/GraphicsView/3D
    ${CMAKE_CURRENT_SOURCE_DIR}/view/DocumentView
    ${CMAKE_CURRENT_SOURCE_DIR}/view/StepResultTreeView
    ${CMAKE_CURRENT_SOURCE_DIR}/view/ItemDrawableView
    ${CMAKE_CURRENT_SOURCE_DIR}/view/ItemDrawableModelView
    ${CMAKE_CURRENT_SOURCE_DIR}/view/ItemDrawableConfigurationView
    ${CMAKE_CURRENT_SOURCE_DIR}/view/MainView
    ${CMAKE_CURRENT_SOURCE_DIR}/view/StepConfigurationView
)

target_link_libraries(ComputreeGui PUBLIC
    ctlibcommon
    ctlibcore
    ctliblog
    AMKgl
    muparser::muparser
    Eigen3::Eigen
    Qt5::OpenGL
    Qt5::Xml
    Qt5::Widgets
    OpenGL::GL
    OpenGL::GLU
)

execute_process(
    COMMAND git rev-parse HEAD
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    OUTPUT_VARIABLE COMPUTREE_REVISION
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/svnrevision.h.in ${CMAKE_CURRENT_SOURCE_DIR}/svnrevision.h)

add_custom_command(TARGET ComputreeGui POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:ComputreeGui> $<TARGET_RUNTIME_DLLS:ComputreeGui>
  COMMAND_EXPAND_LISTS
)
